--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,3 +15,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: make
       run: make
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v3.1.3
+      with:
+        path: .
